<resources>
	<string name="app_name">MrDoodle</string>
	<string name="file_provider_name">org.zakariya.mrdoodle.fileprovider</string>

	<string name="doodle_share_chooser_title">Choose an app</string>

	<string name="menu_item_sync">Sync Settings</string>
	<string name="menu_item_about">About</string>
	<string name="menu_item_show_model_overview">Model Overview</string>
	<string name="menu_item_send_sync_log">Send</string>
	<string name="menu_item_setup_sync">Set up sync…</string>

	<string name="activity_title_about">About</string>
	<string name="activity_title_sync">Sync</string>
	<string name="activity_title_model_overview">Model Overview</string>
	<string name="activity_title_sync_log_entry_detail">Sync Transcript</string>


	<string name="clear">Clear</string>
	<string name="redraw">Redraw</string>
	<string name="undo">Undo</string>
	<string name="saveAndReload">Save &amp; Reload</string>

	<string name="tool_name_brush">Brush</string>
	<string name="tool_name_pencil">Pencil</string>
	<string name="tool_name_large_eraser">Large Eraser</string>
	<string name="tool_name_small_eraser">Small Eraser</string>

	<string name="doodle_menu_undo">Undo</string>
	<string name="doodle_menu_clear">Clear</string>

	<string name="doodle_menu_scale_to_fit">Fit Canvas</string>
	<string name="doodle_menu_center">Center Canvas</string>

	<string name="sync_menu_sign_out">Sign Out</string>

	<string name="color_dialog_title">Color</string>

	<string name="no_camera_dialog_title">Can\'t take a photo</string>
	<string name="no_camera_dialog_message">This device can\'t take photos, either it has no camera app or it has no camera device.</string>
	<string name="no_camera_dialog_positive_button_title">Shucks</string>

	<string name="dialog_rename_document_title">Rename</string>
	<string name="untitled_document">Untitled Doodle</string>

	<string name="dialog_doodle_action_title">Actions</string>
	<string name="dialog_doodle_action_share">Share</string>
	<string name="dialog_doodle_action_delete">Discard</string>
	<string name="dialog_delete_document_message">Discard doodle?</string>
	<string name="dialog_delete_document_destructive_button_title">Discard</string>
	<string name="snackbar_document_deleted">Discarded</string>
	<string name="snackbar_document_deleted_undo">Undo</string>

	<string name="doodle_document_grid_menu_new_doodle">New</string>

	<string name="doodle_document_grid_empty_text">Oh no!\nYou really ought to get doodling.</string>
	<string name="doodle_document_grid_info_text">%1$s\n%2$s\n%3$s\n%4$s</string>

	<string name="about_attributions">https://github.com/ShamylZakariya/MrDoodle</string>

	<string name="sign_in_message">Please sign in to enable sync</string>
	<string name="sign_in_explanation">MrDoodle only uses your account for sign-in and identification purposes. It will not touch any of your data.</string>
	<string name="sync_history">Sync History</string>
	<string name="sync_history_clear">Clear</string>
	<string name="sync_history_clear_alert_confirm">Clear sync history?</string>
	<string name="sync_now_button">Sync</string>
	<string name="sync_reset_button">Reset &amp; Sync</string>

	<string name="sync_server_connection_status_disconnected">Disconnected</string>
	<string name="sync_server_connection_status_connecting">Connecting…</string>
	<string name="sync_server_connection_status_authorizing">Authorizing…</string>
	<string name="sync_server_connection_status_connected">Connected</string>

	<string name="user_id_text_view">User: %1$s</string>

	<string name="sync_log_entry_success">Success</string>
	<string name="sync_log_entry_failure">Failure</string>
	<string name="sync_log_entry_detail_transcript">Transcript</string>
	<string name="sync_log_entry_detail_date">%1$s %2$s</string>
	<string name="sync_log_entry_detail_successful_sync">Successful sync</string>
	<string name="sync_log_entry_detail_unsuccessful_sync">Sync Failure</string>
	<string name="sync_log_entry_detail_send_email_address">shamyl@gmail.com</string>
	<string name="sync_log_entry_detail_send_email_subject">Sync transcript</string>
	<string name="sync_log_entry_detail_send_email_subject_account">Sync transcript for %1$s : %2$s</string>
	<string name="sync_log_entry_detail_send_email_message">MrDoodle Version: %1$s\n\nSync transcript date: %2$s\n\nFailure: %3$s\n\n----\n\n%4$s</string>
	<string name="sync_log_entry_detail_unable_to_send_email_title">Unable to send</string>
	<string name="sync_log_entry_detail_unable_to_send_email_message">Does this device have email configured?</string>
	<string name="locked_for_editing_by_another_device">Locked for editing by another device</string>
	<string name="locked_document_explanation_dialog_title">Locked</string>
	<string name="locked_document_explanation_dialog_message">This doodle is locked because it is being edited on another device</string>
	<string name="doodle_menu_share">Share</string>
	<string name="doodle_menu_delete">Delete</string>
	<string name="dialog_delete_doodle_title">Delete?</string>
	<string name="dialog_delete_doodle_message">Are you sure you want to delete this doodle?</string>
	<string name="dialog_delete_doodle_positive_button_title">Delete</string>
	<string name="deleted_document_explanation_title">Deleted</string>
	<string name="deleted_document_explanation_message">This doodle has been deleted on another device</string>
	<string name="sync_menu_connect">Connect</string>
	<string name="sync_menu_disconnect">Disconnect</string>
	<string name="sync_menu_status">Status</string>
	<string name="sync_menu_show_model_overview">Show Model Overview</string>
	<string name="sync_menu_sync_now">Sync</string>
	<string name="sync_menu_reset_and_sync">Reset &amp; Sync</string>
	<string name="reset_and_sync_dialog_title">Reset &amp; Sync?</string>
	<string name="reset_and_sync_dialog_message">This will delete all local data, and will then pull the current sync state from the server.</string>
	<string name="reset_and_sync_dialog_positive_action_title">Reset &amp; Sync</string>
	<string name="sign_out_dialog_title">Sign Out?</string>
	<string name="sign_out_dialog_message">Signing out will disable sync with other devices, however no data will be lost.</string>
	<string name="sign_out_dialog_positive_action_title">Sign Out</string>
	<string name="connection_status">Connection Status</string>
	<string name="signed_out">Signed out</string>
	<string name="disconnected_message_title">Disconnected</string>



	<!-- transitions -->
	<string name="transition_name_doodle_view">doodleView</string>


</resources>
