<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".ui.MainActivity">

	<item android:id="@+id/menuItemFitCanvasContent"
	      android:icon="@drawable/ic_center_focus"
	      android:title="@string/doodle_menu_scale_to_fit"
	      android:orderInCategory="99"
	      app:showAsAction="ifRoom"/>

	<item android:id="@+id/menuItemUndo"
	      android:icon="@drawable/ic_undo"
	      android:title="@string/doodle_menu_undo"
	      android:orderInCategory="100"
	      app:showAsAction="ifRoom"/>

	<item android:id="@+id/menuItemShare"
	      android:title="@string/doodle_menu_share"
	      android:icon="@drawable/ic_share"
	      android:orderInCategory="101"
	      app:showAsAction="ifRoom"/>

	<item android:id="@+id/menuItemClear"
	      android:title="@string/doodle_menu_clear"
	      android:orderInCategory="102"
	      app:showAsAction="never"/>


	<item android:id="@+id/menuItemDelete"
	      android:title="@string/doodle_menu_delete"
	      android:icon="@drawable/ic_delete"
	      android:orderInCategory="103"
	      app:showAsAction="never"/>


</menu>
